RESOLVED FIXED84199
[BlackBerry] Viewport metatag doesn't disable double-tap zoom
https://bugs.webkit.org/show_bug.cgi?id=84199
Summary [BlackBerry] Viewport metatag doesn't disable double-tap zoom
Jacky Jiang
Reported 2012-04-17 15:04:15 PDT
With the following viewport meta-tag, you can still double-tap zoom the page: <meta name="viewport" content="user-scalable=no, target-density-dpi=device-dpi, width=device-width">
Attachments
Patch (4.82 KB, patch)
2012-04-17 22:28 PDT, Jacky Jiang
no flags
Jacky Jiang
Comment 1 2012-04-17 22:28:51 PDT
WebKit Review Bot
Comment 2 2012-04-17 23:39:52 PDT
Comment on attachment 137654 [details] Patch Clearing flags on attachment: 137654 Committed r114488: <http://trac.webkit.org/changeset/114488>
WebKit Review Bot
Comment 3 2012-04-17 23:39:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.