[BlackBerry] Viewport metatag doesn't disable double-tap zoom https://bugs.webkit.org/show_bug.cgi?id=84199

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-04-17
Reviewed by George Staikos.

Source/WebKit/blackberry:

PR: 148279
When we set "user-scalable=no" in viewport meta-tag and change any
other WebSettings, the WebPage can turn to be scalable.
This is a regression of the change master_32/SHA:fa0f8ee9. In that
change, we used setUserScalable(webSettings->isUserScalable())
in WebPagePrivate::didChangeSettings which was incorrect for non-DRT
case, as webSettings->isUserScalable() would always return true by
default.
Create a new API WebPage::setUserScalable which will be used in
DumpRenderTree.cpp.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::setUserScalable):
(WebKit):
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):
* Api/WebPage.h:

Tools:

Revert a part of the change master_32/SHA:fa0f8ee9 and use
WebPage::setUserScalable instead.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(BlackBerry::WebKit::DumpRenderTree::resetToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/101737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114488 268f45cc-cd09-0410-ab3c-d52691b4dbfc